--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "html-pdf": "^3.0.1",
+    "joi": "^17.13.3",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.8.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
