--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-config-prettier": "^10.0.1",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "prettier": "3.4.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -45,5 +46,11 @@
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,js}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
